--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           </p>
         </div>
         <div class="button-container">
-          <button class="download">
-            <span>Download</span>
+          <button class="download blue">
+            <span class="first">Download</span>
             <span class="v1">v1.3</span>
           </button>
           <button class="what">What is it?</button>
