add desktop. left image to correct

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
   <body>
     <header>
       <img src="./assets/logo.svg" alt="logo of meet" />
-      <img
+      <div class="hero-photos">
+        <img src="./assets/desktop/image-hero-left.png" alt="" />
+        <img src="./assets/desktop/image-hero-right.png" alt="" />
+      </div>
+      <!-- <img
         class="hero-img"
         src="./assets/mobile/Group 4.png"
-        alt="cluster of oval portraits" />
+        alt="cluster of circle portraits" /> -->
     </header>
-
     <main>
       <section class="hero-container">
         <div class="text-wrapper">
@@ -31,7 +34,7 @@
             <span class="first">Download</span>
             <span class="v1">v1.3</span>
           </button>
-          <button class="what">What is it?</button>
+          <button class="what purple">What is it?</button>
         </div>
       </section>
 
@@ -65,12 +68,13 @@
         <div class="line"></div>
         <div class="circle">02</div>
       </div>
+      <div class="footer-wrap"></div>
       <h2>Experience more together</h2>
       <p>
         Stay connected with reliable HD meetings and unlimited one-on-one and
         group video sessions.
       </p>
-      <button class="download">
+      <button class="download purple">
         <span class="down">Download</span>
         <span class="v1">v1.3</span>
       </button>
