correct images halfway

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
   <body>
     <header>
       <img src="./assets/logo.svg" alt="logo of meet" />
-      <div class="hero-photos">
-        <img src="./assets/desktop/image-hero-left.png" alt="" />
-        <img src="./assets/desktop/image-hero-right.png" alt="" />
-      </div>
+
       <!-- <img
         class="hero-img"
         src="./assets/mobile/Group 4.png"
@@ -22,20 +19,32 @@
     </header>
     <main>
       <section class="hero-container">
+        <img
+          class="desktop"
+          src="./assets/desktop/image-hero-left.png"
+          alt="" />
+
+        <img class="tablet" src="./assets/tablet/image-hero.png" alt="" />
+
         <div class="text-wrapper">
           <h1>Group Chat for Everyone</h1>
           <p>
             Meet makes it easy to connect with others face-to-face virtually and
             collaborate across any device.
           </p>
+          <div class="button-container">
+            <button class="download blue">
+              <span class="first">Download</span>
+              <span class="v1">v1.3</span>
+            </button>
+            <button class="what purple">What is it?</button>
+          </div>
         </div>
-        <div class="button-container">
-          <button class="download blue">
-            <span class="first">Download</span>
-            <span class="v1">v1.3</span>
-          </button>
-          <button class="what purple">What is it?</button>
-        </div>
+
+        <img
+          class="desktop"
+          src="./assets/desktop/image-hero-right.png"
+          alt="" />
       </section>
 
       <div class="divider">
